<resources>
    <string name="app_name">GastoViajem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_sera_de">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">CALCULAR</string>
</resources>