<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_colors"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"
        android:inputType="numberDecimal"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/total_de_quilometros"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/preco_por_litro"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/kms_por_litro"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/valor_total"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FF5722"
        android:text="@string/calcular"
        android:textSize="18sp" />


</LinearLayout>